Bug 476532 - Spacebar doesn't always pause/play anymore
Summary: Spacebar doesn't always pause/play anymore
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.11.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords: qt6, regression, usability
Depends on:
Blocks:
 
Reported: 2023-11-04 02:27 UTC by Nate Graham
Modified: 2025-03-04 22:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-11-04 02:27:50 UTC
With Qt 6, it seems like when a button has focus, the spacebar is being eaten rather than pausing or playing the active song, as we had it set up with Qt5.
Comment 1 Justin Zobel 2023-11-29 09:40:50 UTC
Don't you want space bar to be able to activate buttons for accessibility? I just tried using enter in System Settings to activate buttons but only the space bar does.
Comment 2 Nate Graham 2023-11-29 15:08:50 UTC
In general yes, but in a music player the spacebar usually has a special meaning and toggles play and pause irrespective of focus. That conflicts with the accessibility feature, so we made the decision early in Elisa's development to be consistent with what people except for music players, not what people expect for accessibility.
Comment 3 Jack Hill 2023-12-04 20:16:18 UTC
For me this specifically happens for buttons on the player control bar. Except the Show Playlist button which works just fine
Comment 4 Bug Janitor Service 2025-03-01 16:57:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/673
Comment 5 Jack Hill 2025-03-01 18:34:26 UTC
Git commit 5b191f11f1bae3a2bc6bef988a80d3630ac411c5 by Jack Hill.
Committed on 01/03/2025 at 16:55.
Pushed by jackh into branch 'master'.

Fix the spacebar play/pause action when specific buttons have focus

An event filter was applied to some specific buttons with the intention
of overriding the space-bar for the play/pause action, but actually it
had the effect of making the space-bar do nothing when pressed while one
of these buttons had focus.

The space-bar shortcut is already handled by the Kirigami.Action in
ElisaMainWindow, making this event filter unnecessary anyway.

M  +0    -24   src/elisaapplication.cpp
M  +0    -4    src/elisaapplication.h
M  +0    -15   src/qml/MediaPlayerControl.qml

https://invent.kde.org/multimedia/elisa/-/commit/5b191f11f1bae3a2bc6bef988a80d3630ac411c5